tests/urmoac/errors/net_issues/edge_vmax_0_patch/d2r_output.urmoac
2000;10000;50.00;10.00;-200.00;0.00;-200.00;-10.00
2003;10000;350.00;10.00;100.00;0.00;100.00;-10.00
2001;10001;350.00;10.00;-100.00;0.00;-100.00;10.00
2002;10001;250.00;0.00;0.00;0.00;0.00;0.00
2004;10001;50.00;10.00;200.00;0.00;200.00;10.00
